--- a/app/src/main/res/layout/dialog_add_wallet.xml
+++ b/app/src/main/res/layout/dialog_add_wallet.xml
@@ -30,7 +30,7 @@
         android:layout_marginTop="5dp"
         android:ems="10"
         android:hint="Initial Balance"
-        android:inputType="number" />
+        android:inputType="numberSigned" />
 
     <Button
         android:id="@+id/dialog_wallet_add"
