--- a/app/src/main/res/layout/activity_wallet_details.xml
+++ b/app/src/main/res/layout/activity_wallet_details.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/wallet_details_layout"
     android:theme="@style/Theme.AppCompat.NoActionBar"
     tools:context=".hisaab.WalletDetails">
 
@@ -92,10 +93,12 @@
         android:id="@+id/transactions_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/currentBalance" />
+        app:layout_constraintTop_toBottomOf="@+id/currentBalance"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ProgressBar
         android:elevation="100dp"
