--- a/app/src/main/res/layout/transaction_view.xml
+++ b/app/src/main/res/layout/transaction_view.xml
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:textSize="16sp"
+        android:textColor="@color/black"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="4dp"
         android:text="date"
